# jzhou

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
example/eig/epw/: band.eig
example/eig/qe/: aiida.xml
example/eig/vasp/: EIGENVAL  KPOINTS  OUTCAR  POSCAR
example/ph/epw/: phband.freq
example/ph/qe/: aiida.freq  matdyn.in
example/shc/insulator/: aiida.win
example/shc/metal/: aiida.win
src/jzhou/: __init__.py  constant.py  plot_freqbands.py  plot_shc.py  plot_twoxmlbands.py  plot_vaspbands.py  plot_vaspwanbands.py  plot_wanbands.py  plot_xmlbands.py  plot_xmlwanbands.py
src/jzhou/cli/: __init__.py  freqbands.py  root.py  shc.py  twoxmlbands.py  vaspbands.py  vaspwanbands.py  wanbands.py  xmlbands.py  xmlwanbands.py
