[build-system]
# build the package with [flit](https://flit.readthedocs.io)
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
# See https://www.python.org/dev/peps/pep-0621/
name = "jzhou"
dynamic = ["version"]                                                  # read from src/jzhou/__init__.py
description = "Python script to plot DFT results."
authors = [{ name = 'Jiaqi Zhou', email = 'jiaqi.zhou@uclouvain.be' }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    # "License :: Free To Use But Restricted",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
]
keywords = [
    "plot",
    "QuantumEspresso",
    "VASP",
    "Wannier90",
    "EPW",
    "WannierTools",
]
requires-python = ">=3.9"
dependencies = ["numpy", "matplotlib", "ase", "lxml", "click"]

[project.urls]
Source = "https://github.com/Jiaqi-ZHOU/jzhou"
Documentation = "https://github.com/Jiaqi-ZHOU/jzhou/blob/main/README.md"

[project.optional-dependencies]
tests = ["pytest", "pytest-cov", "pytest-regressions"]
pre-commit = ["pre-commit", "pylint"]

[project.scripts]
"jzhou" = "jzhou.cli:cmd_root"

[tool.flit.module]
name = "jzhou"

[tool.pylint.format]
max-line-length = 120

[tool.pytest.ini_options]
minversion = '6.0'
testpaths = ['tests']
# python_files = "test_*.py example_*.py"
filterwarnings = [
    'ignore::DeprecationWarning:frozendict:',
    'ignore::DeprecationWarning:pkg_resources:',
    "ignore::DeprecationWarning:yaml:",
]

[tool.coverage.run]
# Configuration of [coverage.py](https://coverage.readthedocs.io)
# reporting which lines of your plugin are covered by tests
source = ["jzhou"]

[tool.isort]
# Configuration of [isort](https://isort.readthedocs.io)
profile = "black"
force_sort_within_sections = true
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
